@@ -968,11 +968,15 @@ int createFlo(s_link *link, e_prio prio)
    }
 
    switch (prio) {
-      case CRASH : name[9] = 'c';
-                   break;
-      case HOLD  : name[9] = 'h';
-                   break;
-      case NORMAL: break;
+      case CRASH :    name[9] = 'c';
+                      break;
+      case HOLD  :    name[9] = 'h';
+                      break;
+      case DIRECT:    name[9] = 'd';
+                      break;
+      case IMMEDIATE: name[9] = 'i';
+                      break;
+      case NORMAL:    break;
    } /* endswitch */
 
    // create floFile
